--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,23 @@ version: 2.1
 
 orbs:
   node: circleci/node@4.1
+  heroku: circleci/heroku@1.0.1
+
+jobs:
+  build:
+    executor: node/default
+    steps:
+      - checkout
+      - node/install-packages  
 
 workflows:
   sample:
     jobs:
-      - node/test:
-          version: '15.1'
-          # This is the node version to use for the `cimg/node` tag
-          # Relevant tags can be found on the CircleCI Developer Hub
-          # https://circleci.com/developer/images/image/cimg/node
+      - build
+      - heroku/deploy-via-git:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - main    
