--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.1",
+    "linebyline": "^1.3.0",
+    "lodash": "^4.17.21",
+    "node-localstorage": "^2.2.1",
     "puppeteer": "^10.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "react-select": "^4.3.1",
+    "web-vitals": "^1.1.2",
+    "website-scraper": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,7 +45,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^4.8.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
